fix vertical nav margins on mobile

--- a/src/routes/_layout/nav-styles.scss
+++ b/src/routes/_layout/nav-styles.scss
@@ -144,6 +144,7 @@
       left: 0;
       right: 0;
       height: 0; /* hide until mobile nav toggled */
+      margin-top: 0;
       display: flex;
       flex-direction: column;
       justify-content: center;
